@@ -1,2 +1,2 @@
 # set of available languages (in alphabetic order)
-ar ca cs da de el en_GB es eu fr gl hu id it ja lv nb_NO pl pt_BR pt_PT sv tr uk ur zh_CN zh_TW 
+ar ca cs da de el en_GB es eu fr gl hu id it ja lv nb_NO nl pl pt_BR pt_PT sv tr uk ur zh_CN zh_TW 
