@@ -1,3 +1,7 @@
+2009-01-xx  Mike Massonnet <mmassonnet@xfce.org>
+
+	* nl.po: Add new Dutch translation (Vincent)
+
 2009-01-13  Alexander Toresson <eulex@xfce.org>
 
 	* sv.po, LINGUAS: Swedish translation added (Daniel Nylander)
